asychronous socket client and listener, message packer: lv type

--- a/Sharchive.UnitTest/Sharchive.UnitTest.csproj
+++ b/Sharchive.UnitTest/Sharchive.UnitTest.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Type\TestObjectExtensions.cs" />
     <Compile Include="Net\TestDnsDictionary.cs" />
     <Compile Include="Scm\TestSvnAdapter.cs" />
+    <Compile Include="Net\TestAsynchronousSocketListener.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
